Fixed naming of some project files.

--- a/SpaceWarsHex.Core/SpaceWarsHex.Core.csproj
+++ b/SpaceWarsHex.Core/SpaceWarsHex.Core.csproj
@@ -23,7 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="SpaceWars.Core.Tests" />
+    <InternalsVisibleTo Include="SpaceWarsHex.Core.Tests" />
+    <InternalsVisibleTo Include="SpaceWarsHex.Mocks" />
   </ItemGroup>
 
 </Project>
