Start of Selection handling

--- a/SpaceWarsHex.Godot/Properties/launchSettings.json
+++ b/SpaceWarsHex.Godot/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Executable",
       "executablePath": "C:\\Godot\\Godot_v4.3-stable_mono_win64\\Godot_v4.3-stable_mono_win64.exe",
       "commandLineArgs": "--path . --verbose",
-      "workingDirectory": "F:\\projects\\SpaceWarHex\\SpaceWars"
+      "workingDirectory": "F:\\projects\\SpaceWarHex\\SpaceWarsHex.Godot"
     }
   }
 }
