Updated to Godot 4.4; Unified weapon orders.

--- a/SpaceWarsHex.Core/SpaceWarsHex.Core.csproj
+++ b/SpaceWarsHex.Core/SpaceWarsHex.Core.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>SpaceWars</RootNamespace>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <ImplicitUsings>true</ImplicitUsings>
     <BaseOutputPath>..\Assets\lib</BaseOutputPath>
   </PropertyGroup>
 
