--- a/SpaceWarsHex.Serialization/SpaceWarsHex.Serialization.csproj
+++ b/SpaceWarsHex.Serialization/SpaceWarsHex.Serialization.csproj
@@ -2,12 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="protobuf-net" Version="3.2.46" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SpaceWarsHex.Contract\SpaceWarsHex.Contract.csproj" />
-    <ProjectReference Include="..\SpaceWarsHex.Core\SpaceWarsHex.Core.csproj" />
   </ItemGroup>
 
 </Project>
