--- a/SpaceWarsHex.ShipBuilder/SpaceWarsHex.ShipBuilder.csproj
+++ b/SpaceWarsHex.ShipBuilder/SpaceWarsHex.ShipBuilder.csproj
@@ -3,26 +3,26 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows10.0.19041</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <!--<Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>-->
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Castle.Core-NLog" Version="5.2.1" />
+    <PackageReference Include="Castle.LoggingFacility" Version="6.0.0" />
+    <PackageReference Include="Castle.Windsor" Version="6.0.0" />
     <PackageReference Include="ReactiveUI.SourceGenerators" Version="2.5.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="ReactiveUI.WPF" Version="22.2.1" />
+    <PackageReference Include="ReactiveUI.WPF" Version="22.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SpaceWarsHex.Core\SpaceWarsHex.Core.csproj" />
     <ProjectReference Include="..\SpaceWarsHex.Serialization\SpaceWarsHex.Serialization.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\" />
+    <ProjectReference Include="..\SpaceWarsHex.ShipBuilder.ViewModels\SpaceWarsHex.ShipBuilder.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
