--- a/SpaceWarsHex.ShipBuilder.Contract/SpaceWarsHex.ShipBuilder.Contract.csproj
+++ b/SpaceWarsHex.ShipBuilder.Contract/SpaceWarsHex.ShipBuilder.Contract.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ReactiveUI" Version="22.3.1" />
+    <PackageReference Include="ReactiveUI" Version="19.6.12" />
+    <PackageReference Include="ReactiveUI.WPF" Version="19.6.12" />
   </ItemGroup>
 
   <ItemGroup>
