--- a/SpaceWarsHex.ShipBuilder/SpaceWarsHex.ShipBuilder.csproj
+++ b/SpaceWarsHex.ShipBuilder/SpaceWarsHex.ShipBuilder.csproj
@@ -12,12 +12,13 @@
     <PackageReference Include="Castle.Core-NLog" Version="5.2.1" />
     <PackageReference Include="Castle.LoggingFacility" Version="6.0.0" />
     <PackageReference Include="Castle.Windsor" Version="6.0.0" />
-    <PackageReference Include="NLog" Version="4.5.0" />
+    <PackageReference Include="MahApps.Metro" Version="2.4.11" />
+    <PackageReference Include="NLog" Version="6.0.6" />
     <PackageReference Include="ReactiveUI.SourceGenerators" Version="2.5.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="ReactiveUI.WPF" Version="19.6.12" />
+    <PackageReference Include="ReactiveUI.WPF" Version="22.3.1" />
   </ItemGroup>
 
   <ItemGroup>
