Working on Builder. Made SystemPrototypes IClonable.

--- a/SpaceWarsHex.Core/SpaceWarsHex.Core.csproj
+++ b/SpaceWarsHex.Core/SpaceWarsHex.Core.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <InternalsVisibleTo Include="SpaceWarsHex.Core.Tests" />
     <InternalsVisibleTo Include="SpaceWarsHex.Mocks" />
+    <InternalsVisibleTo Include="SpaceWarsHex.ShipBuilder" />
   </ItemGroup>
 
 </Project>
