--- a/SpaceWarsHex.Contract/SpaceWarsHex.Contract.csproj
+++ b/SpaceWarsHex.Contract/SpaceWarsHex.Contract.csproj
@@ -15,5 +15,9 @@
     <PackageReference Include="System.Text.Json" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="SpaceWarsHex.ShipBuilder" />
+  </ItemGroup>
+
 
 </Project>
