--- a/SpaceWarsHex.ShipBuilder/SpaceWarsHex.ShipBuilder.csproj
+++ b/SpaceWarsHex.ShipBuilder/SpaceWarsHex.ShipBuilder.csproj
@@ -28,6 +28,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\WeaponEffectsView.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="nlog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
