Changed Energy Weapons in Builder to use stock weapons, only changing the dice count.

--- a/SpaceWarsHex.Serialization.Tests/SpaceWarsHex.Serialization.Tests.csproj
+++ b/SpaceWarsHex.Serialization.Tests/SpaceWarsHex.Serialization.Tests.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SpaceWarsHex.Mocks\SpaceWarsHex.Mocks.csproj" />
     <ProjectReference Include="..\SpaceWarsHex.Serialization\SpaceWarsHex.Serialization.csproj" />
+    <ProjectReference Include="..\SpaceWarsHex.ShipBuilder.ViewModels\SpaceWarsHex.ShipBuilder.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
