--- a/SpaceWarsHex.Serialization/SpaceWarsHex.Serialization.csproj
+++ b/SpaceWarsHex.Serialization/SpaceWarsHex.Serialization.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageReference Include="protobuf-net" Version="3.2.56" />
   </ItemGroup>
 
