--- a/SpaceWarsHex.ShipBuilder/SpaceWarsHex.ShipBuilder.csproj
+++ b/SpaceWarsHex.ShipBuilder/SpaceWarsHex.ShipBuilder.csproj
@@ -37,6 +37,9 @@
     <None Update="nlog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources/*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
