Ships now can save to a file.

--- a/SpaceWarsHex.Core/SpaceWarsHex.Core.csproj
+++ b/SpaceWarsHex.Core/SpaceWarsHex.Core.csproj
@@ -27,6 +27,7 @@
     <InternalsVisibleTo Include="SpaceWarsHex.Core.Tests" />
     <InternalsVisibleTo Include="SpaceWarsHex.Mocks" />
     <InternalsVisibleTo Include="SpaceWarsHex.ShipBuilder" />
+    <InternalsVisibleTo Include="SpaceWarsHex.ShipBuilder.ViewModels" />
   </ItemGroup>
 
 </Project>
